--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check": "biome check src",
     "ci": "biome ci src",
     "build": "tsc",
-    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest",
+    "test": "eval \"$(cat .env)\" && NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest",
     "start": "node dist/index.js",
     "prepare": "husky"
   },
