feat(groceries): add add page

--- a/biome.json
+++ b/biome.json
@@ -36,6 +36,6 @@
     }
   },
   "files": {
-    "ignore": ["node_modules", "dist", "coverage"]
+    "ignore": ["node_modules", "dist", "coverage", "src/app/public/css/pico.*"]
   }
 }
