feat(groceries): separate concurrency inmemory implementation per stream

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
