--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "postgres": "^3.4.5",
