--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "cd src/app; tsx watch index.ts",
-    "build": "tsc",
+    "dev": "pnpm build && cd src/app; tsx watch index.ts",
+    "build": "tsc && vite build",
     "start": "node dist/app/index.js",
     "prestart": "pnpm build",
     "lint": "biome lint src --write",
@@ -26,18 +26,22 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/express-ejs-layouts": "^2.5.4",
+    "@types/hotwired__turbo": "^8.0.4",
     "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "@types/pg": "^8.11.12",
+    "@vitejs/plugin-react": "^4.5.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "testcontainers": "^10.24.2",
     "ts-jest": "^29.3.1",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   },
   "dependencies": {
+    "@hotwired/turbo": "^8.0.13",
     "async-mutex": "^0.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
