chore: use semicolon as needed

--- a/biome.json
+++ b/biome.json
@@ -32,7 +32,7 @@
       "quoteStyle": "double",
       "jsxQuoteStyle": "double",
       "quoteProperties": "asNeeded",
-      "semicolons": "always"
+      "semicolons": "asNeeded"
     }
   },
   "files": {
