--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "paths": {
       "@groceries/event-sourcing": ["oss/event-sourcing/src/index.ts"],
       "@groceries/event-sourcing/*": ["oss/event-sourcing/src/*"],
+      "@groceries/monad": ["oss/monad/src/index.ts"],
+      "@groceries/monad/*": ["oss/monad/src/*"],
       "@groceries/domain-events": ["packages/domain-events/src/index.ts"],
       "@groceries/domain-events/*": ["packages/domain-events/src/*"],
       "@groceries/app": ["apps/app/src/index.ts"],
